--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vokabel App</title>
     <script defer src="./build/bundle.js"></script>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 
 <body>
-    <my-beispiel></my-beispiel>
-    <input type="text" id="myInput" />
+    <container>
+        <h1> Vokabelapp</h1>
+        <h2> Trainiere dein Vokabel-Wissen </h2>
+    </container>
+
+
+
 </body>
 
 </html>
