--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </svg>
             <h1>Vokabel App</h1>
             <h3> Teste dein Vokabel-Wissen</h3> <br>
-            <a href="#test" class="page-scroll btn btn-xl" style="border-color:#fff; color:#fff">Los geht´s</a>
+            <a href="#anleitung" class="page-scroll btn btn-xl" style="border-color:#fff; color:#fff">Los geht´s</a>
             </div>
             <div>
             <svg class="waves" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
@@ -42,14 +42,22 @@
             </div>
             </div>
     <div class="container">
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi magni quod consectetur, ullam beatae vitae commodi iusto, molestiae debitis expedita necessitatibus quis id nesciunt maiores dolores fuga maxime fugiat! Possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, expedita tempore rem numquam autem ut, optio ea sunt praesentium similique cumque non. Illo quia unde, laboriosam ut corporis fugit iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem minus impedit quaerat perferendis reprehenderit hic, fuga blanditiis magnam modi quod dicta maiores illo quia officiis ab praesentium quisquam facilis culpa? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum totam architecto hic sequi ea labore praesentium quia, iure, voluptates obcaecati quod aliquid enim. Voluptatum, sunt hic libero repellat veritatis placeat?</p>
-    <div id="test">
-        <p>PLATZHALTER FÜR DEN TEST <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis architecto delectus magnam obcaecati labore aspernatur reprehenderit quos laborum enim animi? Autem dignissimos ratione ad. Suscipit, a voluptates. Sunt, saepe eius?</p>
-    </div>
-    
-    </div>
-</header>
-
+        <br> <br>
+        <h2> Funktionen im Überblick</h2> <br>
+        <ul>
+            <li> Lerne mit deinem selbst erstellten personalisiertem Vokabelset! </li>
+            <li> Füge neue Vokabeln zu deiner personalisierten Vokabelliste hinzu. </li>
+            <li> Frage dich selbst ab und erweitere dein Vokabel-Wissen! </li>
+        </ul>
+        <br>  
+    </header>
+<div class="container">
+  <div id="test">
+    <p>PLATZHALTER FÜR DEN TEST <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis architecto delectus magnam obcaecati labore aspernatur reprehenderit quos laborum enim animi? Autem dignissimos ratione ad. Suscipit, a voluptates. Sunt, saepe eius?</p>
+</div>
+  
+</div>
+<br><br><br><br>
 
 
 </body>
