Adding footer HTML

--- a/index.html
+++ b/index.html
@@ -95,5 +95,11 @@
 
 
 </body>
+<footer>
+    <div class="container">
+        <hr>
+        <p style="text-align: center; color:#adadad; "> Jacqueline Bohn | ON22 | Mai 2023</p>
+    </div>    
+</footer>
 
 </html>
