Make things nicer

--- a/index.html
+++ b/index.html
@@ -55,10 +55,9 @@
             <li> Gehe zu den <a href="#newVocabEnInput"> Eingabefeldern. </a> </li> <br>
             <li> Tippe deine Englischen Vokabeln und ihre Deutschen Übersetzungen in die dafür vorgesehenen Eingabefelder ein. </li><br>
             <li> Klicke auf den <a href="#newVocabBtn"> "Hinzufügen"</a> Button, um deine Eingaben in deine <a href="#vocabEnContainer"> Vokabelliste</a>  zu übernehmen. Damit du dich nicht mit veralteten Eingaben herumplagen musst, leert sich die erstellte Vokabelliste beim Neuladen der Anwendung. So kannst du deine eigene Vokabelliste stehts auf dem akutellsten Stand halten-</li><br>
-            <li> Nun hast du einen Überblick über all deine erstellten Vokabeln! </li> 
+            <li> Nun hast du einen Überblick über all deine erstellten Vokabeln! </li>  <br>
+            <li> Viel Spaß!  </li>
         </ol>
-        <p> Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi magni quod consectetur, ullam beatae vitae commodi iusto, molestiae debitis expedita necessitatibus quis id nesciunt maiores dolores fuga maxime fugiat! Possimus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos, expedita tempore rem numquam autem ut, optio ea sunt praesentium similique cumque non. Illo quia unde, laboriosam ut corporis fugit iusto? Lorem ipsum dolor sit amet consectetur adipisicing elit. Autem minus impedit quaerat perferendis reprehenderit hic, fuga blanditiis magnam modi quod dicta maiores illo quia officiis ab praesentium quisquam facilis culpa? Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum totam architecto hic sequi ea labore praesentium quia, iure, voluptates obcaecati quod aliquid enim. Voluptatum, sunt hic libero repellat veritatis placeat?</p>
-    
     </div>
 </header>
 <br> <br> 
