--- a/index.html
+++ b/index.html
@@ -62,16 +62,15 @@
 </header>
 <br> <br> 
 <div class="container">
-<div class="notice">
-    <h3>Neue Vokabeln hinzufügen:</h3> <br>
-    <input type="text" style="border-radius: 1px; border-color: #002e79 ;border-radius: 5px;"name="newVocabEnInput" id="newVocabEnInput" placeholder="Englisch"/>
-    <input type="text" style="border-radius: 1px; border-color: #002e79;border-radius: 5px;"name="newVocabDeInput" id="newVocabDeInput" placeholder="Deutsch"/><br>
-    <br>
-    <button id="newVocabBtn" class="btn" style="border-radius: 1px; border-color: #002e79;border-radius: 5px;">Hinzufügen</button><br>
+<div class="notice" style="max-width: 50%; margin-left: auto; margin-right: auto; ">
+    <h3 >Neue Vokabeln hinzufügen:</h3> <br>
+    <input type="text" style="border-radius: 1px; border-color: #000;border-radius: 5px;"name="newVocabEnInput" id="newVocabEnInput" placeholder="Englisch"/>
+    <input type="text" style="border-radius: 1px; border-color: #000;border-radius: 5px;"name="newVocabDeInput" id="newVocabDeInput" placeholder="Deutsch"/> <br> <br>
+    <button id="newVocabBtn" class="btn" style="border-radius: 1px; border-color: #002e79;border-radius: 5px; background-color: #002e79; color:#fff">Hinzufügen</button><br>
     <small><span id="validatorMessage"></span></small>
   </div> <br>
-<h5> Vokabelliste:</h5>
-<table class="table">
+<h5 style="text-align: center;"> Vokabelliste:</h5>
+<table class="table" style="max-width: 50%; margin-left: auto; margin-right: auto;">
     <thead>
       <tr>
         <th scope="col">Englisch</th>
