--- a/index.html
+++ b/index.html
@@ -62,11 +62,12 @@
 </header>
 <br> <br> 
 <div class="container">
-<div class="notice" style="max-width: 50%; margin-left: auto; margin-right: auto; ">
+<div  class="notice" style="max-width: 50%; margin-left: auto; margin-right: auto;  ">
     <h3 >Neue Vokabeln hinzufügen:</h3> <br>
-    <input type="text" style="border-radius: 1px; border-color: #000;border-radius: 5px;"name="newVocabEnInput" id="newVocabEnInput" placeholder="Englisch"/>
+    <input type="text"  style="border-radius: 1px; border-color: #000;border-radius: 5px;"name="newVocabEnInput" id="newVocabEnInput" placeholder="Englisch" />
     <input type="text" style="border-radius: 1px; border-color: #000;border-radius: 5px;"name="newVocabDeInput" id="newVocabDeInput" placeholder="Deutsch"/> <br> <br>
-    <button id="newVocabBtn" class="btn" style="border-radius: 1px; border-color: #002e79;border-radius: 5px; background-color: #002e79; color:#fff">Hinzufügen</button><br>
+    <button id="newVocabBtn" class="btn" style="border-radius: 1px; border-color: #002e79;border-radius: 5px; background-color: #002e79; color:#fff">Hinzufügen</button>
+    <button id="emptyVocabBtn" class="btn" style="border-radius: 1px; border-color: #002e79;border-radius: 5px; background-color: #002e79; color:#fff">Liste leeren</button><br>
     <small><span id="validatorMessage"></span></small>
   </div> <br>
 <h5 style="text-align: center;"> Vokabelliste:</h5>
