Print whole page (!!change to only print table!)

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <small><span id="validatorMessage"></span></small>
   </div> <br>
 <h5 style="text-align: center;"> Vokabelliste:</h5> <br>
-<div class="table_container" id="printArea">
+<div class="printArea">
 <table class="boostrap4_table_head_dark_striped_rounded_with_shadow" style="max-width: 50%; margin-left: auto; margin-right: auto; ">
     <thead>
       <tr>
@@ -96,6 +96,10 @@
   <div class="container" style="max-width:auto; display: inline-flex; justify-content:center;">
   <button id="fullScBtn" class="btn" style="border-radius: 1px; border-color: #4984e3;border-radius: 5px; background-color: #4984e3; color:#fff;  ">Vollbildmodus</button>
 </div>
+</div> <br> <br>
+<p style="max-width: 50%; margin-left: auto; margin-right: auto;"> Drucke hier ganz einfach deine erstelle Vokabelliste aus. So kannst du auch ganz ohne Strom immer darauf zugreifen.</p> 
+<div class="container" style="max-width:auto; display: inline-flex; justify-content:center;">
+<button id="printBtn" class="btn" style="border-radius: 1px; border-color: #4984e3;border-radius: 5px; background-color: #4984e3; color:#fff;  ">Vokabelliste drucken </button> <br>
 </div>
 </div>
   <div id="test">
