--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
 <br> <br>
 
   <div id="hidePrint">
+    <!--Area to show the Quiz later-->
+    <div id="quizArea"> </div>
     <p>PLATZHALTER FÜR DEN TEST <br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis architecto delectus magnam obcaecati labore aspernatur reprehenderit quos laborum enim animi? Autem dignissimos ratione ad. Suscipit, a voluptates. Sunt, saepe eius?</p>
 </div>
 
